--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World again
+<!doctype html>
+<html>
+<head>
+	<title>Give Your Page a Good Title</title>
+</head>
+<body>
+	<p>Hello Project!</p>
+</body>
+</html>
