--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
 <head>
-	<title>Give Your Page a Good Title</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>This Title is the Best</title>
 </head>
 <body>
 	<p>Hello Project!</p>
