--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 	<p>Hello Project!</p>
+	<p class="hidden-links">This is a hidden link!</p>
+	<p id="first-paragraph">Hello I am an example first paragraph!</p>
 </body>
 </html>
