Started work with colors, added Bootstrap

--- a/index.html
+++ b/index.html
@@ -19,22 +19,36 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
-    <div class="row">
-			<div class="col-sm-12">
-				<div class="col-sm-6">
-					<p id="different">I'm different :)</p>
-				</div>
-				<div class="col-sm-6">
-					<p>I'm not :(</p>
-				</div>
-			</div>
-		</div>
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <div class="title">
+      <h1>Welcome to my site!</h1>
+    </div>
+    <div class="text-info">
+      <br>
+      <br>
+      <p>I haven't really done anything yet so here's a bunch of something!</p>
+      <br>
+      <br>
+    </div>
+    <br>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6" style="background-color:yellow">
+          <br>
+          <p class="a1">This is yellow</p>
+          <br>
+        </div>
+        <div class="col-md-6" style="background-color:pink">
+          <br>
+          <p class="a1">This is pink</p>
+          <br>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
