--- a/index.html
+++ b/index.html
@@ -1,54 +1,198 @@
+<!--
+Author: W3layouts
+Author URL: http://w3layouts.com
+License: Creative Commons Attribution 3.0 Unported
+License URL: http://creativecommons.org/licenses/by/3.0/
+-->
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+<html>
+<head>
+<title>Photographer a Photo Gallery Category Flat Bootstrap Responsive Website Template | Home :: w3layouts</title>
+<!-- for-mobile-apps -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="keywords" content="Photographer Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
+		function hideURLbar(){ window.scrollTo(0,1); } </script>
+<!-- //for-mobile-apps -->
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<!-- js -->
+<script src="js/jquery-1.11.1.min.js"></script>
+<!-- //js -->
+<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Syncopate:400,700' rel='stylesheet' type='text/css'>
+</head>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<body>
+<!-- banner-body -->
+	<div class="banner-body">
+		<div class="container">
+			<div class="banner-body-content">
+				<div class="top-nav">
+					<nav class="navbar navbar-default">
+						<!-- Brand and toggle get grouped for better mobile display -->
+						<div class="navbar-header">
+						  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						  </button>
+						</div>
 
-		<!-- Link to CSS File style.css-->
-		<link rel="stylesheet" type="text/css" href="style.css">
+						<!-- Collect the nav links, forms, and other content for toggling -->
+						<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
+							<nav class="fill">
+								<ul class="nav navbar-nav">
+									<li class="active"><a href="index.html">Home</a></li>
+									<li><a href="services.html">Services</a></li>
+									<li><a href="events.html">News & Events</a></li>
+									<li><a href="short-codes.html">Short Codes</a></li>
+									<li><a href="gallery.html">Gallery</a></li>
+									<li><a href="mail.html">Mail Us</a></li>
+								</ul>
+							</nav>
+						</div>
+						<!-- /.navbar-collapse -->
+					</nav>
+				</div>
+				<div class="banner">
+					<div class="wmuSlider example1">
+						<div class="wmuSliderWrapper">
+							<article style="position: absolute; width: 100%; opacity: 0;">
+							  <div class="banner-wrap">
+									<div class="banner1">
+										<div class="banner1-info">
+											<a href="index.html">Vexillology <span>Welcome to the world of flags!</span></a>
+										 </div>
+									</div>
+								</div>
+							</article>
+						  <article style="position: absolute; width: 100%; opacity: 0;">
+								<div class="banner-wrap">
+									<div class="banner2">
+										<div class="banner1-info">
+											 <a href="index.html">Vexillology <span>Welcome to the world of flags!</span></a>
+										 </div>
+									</div>
+								</div>
+							</article>
+							<article style="position: absolute; width: 100%; opacity: 0;">
+								<div class="banner-wrap">
+									<div class="banner3">
+										<div class="banner1-info">
+											 <a href="index.html">Vexillology <span>Welcome to the world of flags!</span></a>
+										 </div>
+									</div>
+								 </div>
+							</article>
+						</div>
+					</div>
+							<script src="js/jquery.wmuSlider.js"></script>
+							<script>
+								$('.example1').wmuSlider();
+							</script>
+				</div>
+				<div class="banner-bottom">
+					<div class="col-md-7 banner-bottom-left">
+						<div class="banner-bottom-left1">
+							<h2>Welcome to my Flag Site!</h2>
+							<div class="col-md-4 banner-bottom-left1-gridl">
+								<img src="images/flag-guy.jpg" alt=" " class="img-responsive" />
+							</div>
+							<div class="col-md-8 banner-bottom-left1-gridr">
+								<p>Flags are a lot of fun and I'm here to show you why! We will be exploring:</p>
+								<ul>
+									<li><a href="">Some of my favorite flags</a></li>
+									<li><a href="">Brief history behind the flags</a></li> <br>
+									<li><a href="">Flags that look similar</a></li>
+								</ul>
+							</div>
+							<div class="clearfix"> </div>
+						</div>
+						<div class="banner-bottom-left2">
+							<h3>Offered Services</h3>
+							<div class="col-md-4 banner-bottom-left2l">
+								<img src="images/flagguy.jpg" alt=" " class="img-responsive" />
+							</div>
+							<div class="col-md-8 banner-bottom-left2r">
+								<ul>
+									<li><a href="">Sed ut perspiciatis unde omnis</a></li>
+									<li><a href="">But I must explain to you</a></li>
+									<li><a href="">Neque porro quisquam est, qui</a></li>
+									<li><a href="">Quis autem vel eum iure reprehend</a></li>
+								</ul>
+							</div>
+							<div class="clearfix"> </div>
+						</div>
+					</div>
+					<div class="col-md-5 banner-bottom-right">
+						<div class="newsletter">
+							<h1>Newsletter</h1>
+							<form>
+								<input type="email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
+								<input type="submit" value="Subscribe" >
+							</form>
+						</div>
+						<div class="news">
+							<h3>Why Flags Are Important</h3>
+							<p>Flags are an important part of everyday life and make up your national identity. Here are the Five Basic Principles of Flag Design:</p>
+							<ul>
+								<li><a href="">Keep it Simple</a></li> <br>
+								<li><a href="">Use Meaningful Symbolism</a></li> <br>
+								<li><a href="">Use Two to Three Basic Colours</a></li> <br>
+								<li><a href="">No Lettering or Seals</a></li> <br>
+								<li><a href="">Be Distinctive</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="clearfix"> </div>
+				</div>
+			</div>
+		</div>
+	</div>
+<!-- //banner-body -->
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <div class="title">
-      <h1>Welcome to my site!</h1>
-    </div>
-    <div class="text-info">
-      <br>
-      <br>
-      <p>I haven't really done anything yet so here's a bunch of something!</p>
-      <br>
-      <br>
-    </div>
-    <br>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-6" style="background-color:yellow">
-          <br>
-          <p class="a1">This is yellow</p>
-          <br>
-        </div>
-        <div class="col-md-6" style="background-color:pink">
-          <br>
-          <p class="a1">This is pink</p>
-          <br>
-        </div>
-      </div>
-    </div>
-  </body>
+<!-- footer -->
+	<div class="footer">
+		<div class="container">
+			<div class="footer-left">
+				<ul>
+					<li><a href="index.html"><i>Vex</i>illology</a><span> |</span></li>
+					<li><p>The awesome hobbie. </p></li>
+				</ul>
+			</div>
+			<div class="footer-right">
+				<p>© 2016 Flags n' More. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+<!-- //footer -->
+<!-- scroll_top_btn -->
+		<script type="text/javascript" src="js/move-top.js"></script>
+		<script type="text/javascript" src="js/easing.js"></script>
+	    <script type="text/javascript">
+			$(document).ready(function() {
+
+				var defaults = {
+		  			containerID: 'toTop', // fading element id
+					containerHoverID: 'toTopHover', // fading element hover id
+					scrollSpeed: 1200,
+					easingType: 'linear'
+		 		};
+
+
+				$().UItoTop({ easingType: 'easeOutQuart' });
+
+			});
+		</script>
+		 <a href="#" id="toTop" style="display: block;"><span id="toTopHover" style="opacity: 1;"></span></a>
+<!--end scroll_top_btn -->
+<!-- for bootstrap working -->
+	<script src="js/bootstrap.js"></script>
+<!-- //for bootstrap working -->
+</body>
 </html>
