--- a/my-favorites.html
+++ b/my-favorites.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>Photographer a Photo Gallery Category Flat Bootstrap Responsive Website Template | Services :: w3layouts</title>
+<title>Fun With Flags!</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -195,98 +195,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 <!-- //banner-body -->
-<!-- footer-top -->
-	<div class="footer-top">
-		<div class="container">
-			<div class="col-md-3 footer-top-grid">
-				<h3>About <span>Us</span></h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
-					id arcu neque, at convallis est felis.</p>
-			</div>
-			<div class="col-md-3 footer-top-grid">
-				<h3>The <span>Tags</span></h3>
-				<div class="unorder">
-					<ul class="tag2">
-						<li><a href="single.html">Photos</a></li>
-						<li><a href="single.html">Camera</a></li>
-						<li><a href="single.html">development</a></li>
-					</ul>
-					<ul class="tag2">
-						<li><a href="single.html">Albums</a></li>
-						<li><a href="single.html">photoshop</a></li>
-						<li><a href="single.html">photography</a></li>
-					</ul>
-					<ul class="tag2">
-						<li><a href="single.html">Photos</a></li>
-						<li><a href="single.html">Camera</a></li>
-						<li><a href="single.html">development</a></li>
-					</ul>
-					<ul class="tag2">
-						<li><a href="single.html">Albums</a></li>
-						<li><a href="single.html">photoshop</a></li>
-						<li><a href="single.html">photography</a></li>
-					</ul>
-					<ul class="tag2">
-						<li><a href="single.html">Photos</a></li>
-						<li><a href="single.html">Camera</a></li>
-						<li><a href="single.html">development</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-md-3 footer-top-grid">
-				<h3>Latest <span>Tweets</span></h3>
-				<ul class="twi">
-					<li>I like this awesome freebie. Check it out <a href="mailto:info@example.com" class="mail">
-					@http://t.co/9vslJFpW</a> <span>ABOUT 15 MINS</span></li>
-					<li>I like this awesome freebie. You can view it online here<a href="mailto:info@example.com" class="mail">
-					@http://t.co/9vslJFpW</a> <span>ABOUT 2 HOURS AGO</span></li>
-				</ul>
-			</div>
-			<div class="col-md-3 footer-top-grid">
-				<h3>Flickr <span>Feed</span></h3>
-				<div class="flickr-grids">
-					<div class="flickr-grid">
-						<a href="single.html"><img src="images/4.jpg" alt=" " class="img-responsive" /></a>
-					</div>
-					<div class="flickr-grid">
-						<a href="single.html"><img src="images/6.jpg" alt=" " class="img-responsive" /></a>
-					</div>
-					<div class="flickr-grid">
-						<a href="single.html"><img src="images/11.jpg" alt=" " class="img-responsive" /></a>
-					</div>
-					<div class="clearfix"> </div>
-
-					<div class="flickr-grid">
-						<a href="single.html"><img src="images/12.jpg" alt=" " class="img-responsive" /></a>
-					</div>
-					<div class="flickr-grid">
-						<a href="single.html"><img src="images/11.jpg" alt=" " class="img-responsive" /></a>
-					</div>
-					<div class="flickr-grid">
-						<a href="single.html"><img src="images/6.jpg" alt=" " class="img-responsive" /></a>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-<!-- //footer-top -->
 <!-- footer -->
-	<div class="footer">
-		<div class="container">
-			<div class="footer-left">
-				<ul>
-					<li><a href="index.html"><i>Photo</i>grapher</a><span> |</span></li>
-					<li><p>The awesome agency. <span>0800 (123) 4567 // Australia 746 PO</span></p></li>
-				</ul>
-			</div>
-			<div class="footer-right">
-				<p>© 2016 Photographer. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
-			</div>
-			<div class="clearfix"> </div>
+<div class="footer">
+	<div class="container">
+		<div class="footer-left">
+			<ul>
+				<li><a href="index.html"><i>Vex</i>illology</a><span> |</span></li>
+				<li><p>An awesome hobbie. </p></li>
+			</ul>
 		</div>
+		<div class="footer-right">
+			<p>© 2016 Flags n' More. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+		</div>
+		<div class="clearfix"> </div>
 	</div>
+</div>
 <!-- //footer -->
 <!-- scroll_top_btn -->
 		<script type="text/javascript" src="js/move-top.js"></script>
