--- a/similar.html
+++ b/similar.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>Photographer a Photo Gallery Category Flat Bootstrap Responsive Website Template | News & Events :: w3layouts</title>
+<title>Fun With Flags!</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -99,43 +99,86 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="latest-news">
 						<h2>Similar flags</h2>
 						<div class="latest-news-grids">
-							<h4>Hello this is a line of text</h4>
-							<div class="col-md-4 latest-news-grid">
-								<h1><span>This is the first flag</span></h1>
-								<img src="flags/ci.png" alt=" " class="img-responsive" />
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h4>Chad</h4>
+									<img src="flags/chad.png" alt=" " class="img-responsive" />
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Romania</h4>
+									<img src="flags/romania.png" alt=" " class="img-responsive"/>
+								</div>
 							</div>
-							<div class="col-md-4 latest-news-grid">
-								<h1><span>This is the second flag</span></h1>
-								<img src="flags/ie.png" alt=" " class="img-responsive" />
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h1><span>Senegal</span></h1>
+									<img src="flags/senegal.png" alt=" " class="img-responsive"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h1><span>Mali</span></h1>
+									<img src="flags/mali.png" alt=" " class="img-responsive"  />
+								</div>
 							</div>
-							<div class="col-md-4 latest-news-grid">
-								<h1><span>This is the third flag</span></h1>
-								<img src="images/12.jpg" alt=" " class="img-responsive" />
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h1><span>Indonesia</span></h1>
+									<img src="flags/indonesia.png" alt=" " class="img-responsive" />
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h1><span>Monaco</span></h1>
+									<img src="flags/monaco.png" alt=" " class="img-responsive" />
+								</div>
 							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h1><span>New Zealand</span></h1>
+									<img src="flags/newzealand.png" alt=" " class="img-responsive" style="1px solid black"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h1><span>Australia</span></h1>
+									<img src="flags/australia.png" alt=" " class="img-responsive" style="1px solid black"/>
+								</div>
+							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h1><span>Ivory Coast</span></h1>
+									<img src="flags/ivorycoast.png" alt=" " class="img-responsive" style="1px solid black"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h1><span>Ireland</span></h1>
+									<img src="flags/ireland.png" alt=" " class="img-responsive" style="1px solid black" />
+								</div>
+							</div>
+
 							<div class="clearfix"> </div>
 						</div>
+					<!-- latest-news ends -->
 					</div>
-				<!-- //latest-news -->
+				</div>
 			</div>
 		</div>
 	</div>
 <!-- //banner-body -->
 
 <!-- footer -->
-	<div class="footer">
-		<div class="container">
-			<div class="footer-left">
-				<ul>
-					<li><a href="index.html"><i>Photo</i>grapher</a><span> |</span></li>
-					<li><p>The awesome agency. <span>0800 (123) 4567 // Australia 746 PO</span></p></li>
-				</ul>
-			</div>
-			<div class="footer-right">
-				<p>© 2016 Photographer. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
-			</div>
-			<div class="clearfix"> </div>
+<div class="footer">
+	<div class="container">
+		<div class="footer-left">
+			<ul>
+				<li><a href="index.html"><i>Vex</i>illology</a><span> |</span></li>
+				<li><p>An awesome hobbie. </p></li>
+			</ul>
 		</div>
+		<div class="footer-right">
+			<p>© 2016 Flags n' More. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+		</div>
+		<div class="clearfix"> </div>
 	</div>
+</div>
 <!-- //footer -->
 <!-- scroll_top_btn -->
 		<script type="text/javascript" src="js/move-top.js"></script>
