--- a/similar.html
+++ b/similar.html
@@ -102,55 +102,107 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="element">
 								<div class="col-md-4 latest-news-grid">
 									<h4>Chad</h4>
-									<img src="flags/chad.png" alt=" " class="img-responsive" />
+									<img src="flags/chad.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
 								</div>
 								<div class="col-md-4 latest-news-grid">
 									<h4>Romania</h4>
-									<img src="flags/romania.png" alt=" " class="img-responsive"/>
+									<img src="flags/romania.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
 								</div>
 							</div>
 
 							<div class="element">
 								<div class="col-md-4 latest-news-grid">
-									<h1><span>Senegal</span></h1>
-									<img src="flags/senegal.png" alt=" " class="img-responsive"/>
+									<h4>Senegal</h4>
+									<img src="flags/senegal.png" alt=" " class="img-responsive"style="padding:0px; border:1px solid black; margin:10px;"/>
 								</div>
 								<div class="col-md-4 latest-news-grid">
-									<h1><span>Mali</span></h1>
-									<img src="flags/mali.png" alt=" " class="img-responsive"  />
-								</div>
-							</div>
-
-							<div class="element">
-								<div class="col-md-4 latest-news-grid">
-									<h1><span>Indonesia</span></h1>
-									<img src="flags/indonesia.png" alt=" " class="img-responsive" />
-								</div>
-								<div class="col-md-4 latest-news-grid">
-									<h1><span>Monaco</span></h1>
-									<img src="flags/monaco.png" alt=" " class="img-responsive" />
+									<h4>Mali</h4>
+									<img src="flags/mali.png" alt=" " class="img-responsive"style="padding:0px; border:1px solid black; margin:10px;"/>
 								</div>
 							</div>
 
 							<div class="element">
 								<div class="col-md-4 latest-news-grid">
-									<h1><span>New Zealand</span></h1>
-									<img src="flags/newzealand.png" alt=" " class="img-responsive" style="1px solid black"/>
+									<h4>Indonesia</h4>
+									<img src="flags/indonesia.png" alt=" " class="img-responsive"style="padding:0px; border:1px solid black; margin:10px;"/>
 								</div>
 								<div class="col-md-4 latest-news-grid">
-									<h1><span>Australia</span></h1>
-									<img src="flags/australia.png" alt=" " class="img-responsive" style="1px solid black"/>
+									<h4>Monaco</h4>
+									<img src="flags/monaco.png" alt=" " class="img-responsive"style="padding:0px; border:1px solid black; margin:10px;"/>
 								</div>
 							</div>
 
 							<div class="element">
 								<div class="col-md-4 latest-news-grid">
-									<h1><span>Ivory Coast</span></h1>
-									<img src="flags/ivorycoast.png" alt=" " class="img-responsive" style="1px solid black"/>
+									<h4>New Zealand</h4>
+									<img src="flags/newzealand.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
 								</div>
 								<div class="col-md-4 latest-news-grid">
-									<h1><span>Ireland</span></h1>
-									<img src="flags/ireland.png" alt=" " class="img-responsive" style="1px solid black" />
+									<h4>Australia</h4>
+									<img src="flags/australia.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h4>Ivory Coast</h4>
+									<img src="flags/ivorycoast.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Ireland</h4>
+									<img src="flags/ireland.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h4>Norway</h4>
+									<img src="flags/norway.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Iceland</h4>
+									<img src="flags/iceland.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h4>Venezuela</h4>
+									<img src="flags/venezuela.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Ecuador</h4>
+									<img src="flags/ecuador.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Colombia</h4>
+									<img src="flags/colombia.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h4>Russia</h4>
+									<img src="flags/russia.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Slovakia</h4>
+									<img src="flags/slovakia.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Slovenia</h4>
+									<img src="flags/slovenia.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h4>The Netherlands</h4>
+									<img src="flags/netherlands.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Luxembourg</h4>
+									<img src="flags/luxembourg.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
 								</div>
 							</div>
 
