--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</ul>
 			</div>
 			<div class="footer-right">
-				<p>© 2016 Flags n' More. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+				<p>© 2016 Lucas Beitzel. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
