--- a/my-favorites.html
+++ b/my-favorites.html
@@ -96,99 +96,73 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</script>
 				</div>
 				<!-- services -->
-					<div class="services">
-						<h2>Our Services</h2>
-						<div class="services-grids">
-							<div class="col-md-6 services-grid">
-								<div class="services-grid-left">
-									<span class="glyphicon glyphicon-import" aria-hidden="true"></span>
-								</div>
-								<div class="services-grid-right">
-									<h3><a href="single.html">nisi ut aliquid ex ea commodi</a></h3>
-									<p>Ut enim ad minima veniam, quis nostrum exercitationem ullam
-										corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-										consequatur.</p>
-								</div>
-								<div class="clearfix"> </div>
+				<div class="latest-news">
+					<h2>My Favorite Flags</h2>
+					<div class="latest-news-grids">
+						<div class="element">
+							<div class="col-md-4 latest-news-grid">
+								<h4>Barbados</h4>
+								<img src="flags/barbados.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
 							</div>
-							<div class="col-md-6 services-grid">
-								<div class="services-grid-left">
-									<span class="glyphicon glyphicon-flash" aria-hidden="true"></span>
-								</div>
-								<div class="services-grid-right">
-									<h3><a href="single.html">quis nostrum exercita ullam</a></h3>
-									<p>Ut enim ad minima veniam, quis nostrum exercitationem ullam
-										corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-										consequatur.</p>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-							<div class="clearfix"> </div>
 						</div>
-						<div class="services-grids">
-							<div class="col-md-6 services-grid">
-								<div class="services-grid-left">
-									<span class="glyphicon glyphicon-pawn" aria-hidden="true"></span>
-								</div>
-								<div class="services-grid-right">
-									<h3><a href="single.html">accusantium dolore laudan</a></h3>
-									<p>Ut enim ad minima veniam, quis nostrum exercitationem ullam
-										corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-										consequatur.</p>
-								</div>
-								<div class="clearfix"> </div>
+
+						<div class="element">
+							<div class="col-md-4 latest-news-grid">
+								<h4>Seychelles</h4>
+								<img src="flags/seychelles.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
 							</div>
-							<div class="col-md-6 services-grid services-gridasd">
-								<div class="services-grid-left">
-									<span class="glyphicon glyphicon-retweet" aria-hidden="true"></span>
-								</div>
-								<div class="services-grid-right">
-									<h3><a href="single.html">cillum dolore ugiat nulla</a></h3>
-									<p>Ut enim ad minima veniam, quis nostrum exercitationem ullam
-										corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-										consequatur.</p>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-							<div class="clearfix"> </div>
 						</div>
-						<h1>Ut enim ad minima veniam, quis nostrum exercitationem ullam
-							corporis suscipit laboriosam <span>Photography</span></h1>
-						<div class="services-list">
-							<div class="col-md-6 services-list-left">
-								<p>Ut enim ad minima veniam, quis nostrum exercitationem ullam
-									corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-									consequatur.</p>
-								<ul>
-									<li><a href="single.html">Sed ut perspiciatis unde omnis</a></li>
-									<li><a href="single.html">But I must explain to you</a></li>
-									<li><a href="single.html">Neque porro quisquam est, qui</a></li>
-									<li><a href="single.html">Quis autem vel eum iure reprehend</a></li>
-									<li><a href="single.html">Temporibus autem quibusdam et aut</a></li>
-									<li><a href="single.html">Lorem Ipsum is not simply random</a></li>
-								</ul>
+
+						<div class="element">
+							<div class="col-md-4 latest-news-grid">
+								<h4>Macedonia</h4>
+								<img src="flags/macedonia.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
 							</div>
-							<div class="col-md-6 services-list-right">
-								<div class="col-md-6 services-list-right-grid">
-									<div class="services-list-right-grid1">
-										<img src="images/11.jpg" alt=" " class="img-responsive" />
-										<h4><a href="single.html">Temporibus quibusdam</a></h4>
-										<p>Ut enim ad minima veniam, quis nostrum exercitationem ullam
-										corporis suscipit laboriosam.</p>
-									</div>
-								</div>
-								<div class="col-md-6 services-list-right-grid">
-									<div class="services-list-right-grid1">
-										<img src="images/12.jpg" alt=" " class="img-responsive" />
-										<h4><a href="single.html">suscipit laboriosam</a></h4>
-										<p>Ut enim ad minima veniam, quis nostrum exercitationem ullam
-										corporis suscipit laboriosam.</p>
-									</div>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-							<div class="clearfix"> </div>
 						</div>
+
+						<div class="element">
+							<div class="col-md-4 latest-news-grid">
+								<h4>Albania</h4>
+								<img src="flags/albania.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+							</div>
+						</div>
+
+						<div class="element">
+							<div class="col-md-4 latest-news-grid">
+								<h4>Bhutan</h4>
+								<img src="flags/bhutan.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+							</div>
+						</div>
+
+						<div class="element">
+							<div class="col-md-4 latest-news-grid">
+								<h4>Sri Lanka</h4>
+								<img src="flags/srilanka.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+							</div>
+						</div>
+
+						<div class="element">
+							<div class="col-md-4 latest-news-grid">
+								<h4>Kyrgyzstan</h4>
+								<img src="flags/kyrgyzstan.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+							</div>
+						</div>
+
+						<div class="element">
+							<div class="col-md-4 latest-news-grid">
+								<h4>United Kingdom</h4>
+								<img src="flags/uk.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+							</div>
+						</div>
+
+						<div class="element">
+							<div class="col-md-4 latest-news-grid">
+								<h4>United States</h4>
+								<img src="flags/us.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+							</div>
+						</div>
+
+						<div class="clearfix"> </div>
 					</div>
 				<!-- //services -->
 			</div>
@@ -205,7 +179,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</ul>
 		</div>
 		<div class="footer-right">
-			<p>© 2016 Flags n' More. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+			<p>© 2016 Lucas Beitzel. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
 		</div>
 		<div class="clearfix"> </div>
 	</div>
