--- a/similar.html
+++ b/similar.html
@@ -108,6 +108,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<h4>Romania</h4>
 									<img src="flags/romania.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
 								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Andorra</h4>
+									<img src="flags/andorra.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Moldova</h4>
+									<img src="flags/moldova.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
 							</div>
 
 							<div class="element">
@@ -129,6 +137,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<div class="col-md-4 latest-news-grid">
 									<h4>Monaco</h4>
 									<img src="flags/monaco.png" alt=" " class="img-responsive"style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Poland</h4>
+									<img src="flags/poland.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
 								</div>
 							</div>
 
@@ -204,6 +216,152 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<h4>Luxembourg</h4>
 									<img src="flags/luxembourg.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
 								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Croatia</h4>
+									<img src="flags/croatia.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Paraguay</h4>
+									<img src="flags/paraguay.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h4>Costa Rica</h4>
+									<img src="flags/costarica.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Thailand</h4>
+									<img src="flags/thailand.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h4>Argentina</h4>
+									<img src="flags/argentina.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>El Salvador</h4>
+									<img src="flags/elsalvador.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Honduras</h4>
+									<img src="flags/honduras.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Nicaragua</h4>
+									<img src="flags/nicaragua.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h4>Egypt</h4>
+									<img src="flags/egypt.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Iraq</h4>
+									<img src="flags/iraq.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Yemen</h4>
+									<img src="flags/yemen.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Sudan</h4>
+									<img src="flags/sudan.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Syria</h4>
+									<img src="flags/syria.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h4>Niger</h4>
+									<img src="flags/niger.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>India</h4>
+									<img src="flags/india.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h4>Italy</h4>
+									<img src="flags/italy.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Mexico</h4>
+									<img src="flags/mexico.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h4>Bolivia</h4>
+									<img src="flags/bolivia.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Ghana</h4>
+									<img src="flags/ghana.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h4>Lithuania</h4>
+									<img src="flags/lithuania.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Myanmar</h4>
+									<img src="flags/myanmar.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h4>Bahrain</h4>
+									<img src="flags/bahrain.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Qatar</h4>
+									<img src="flags/qatar.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h4>Samoa</h4>
+									<img src="flags/samoa.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Taiwan</h4>
+									<img src="flags/taiwan.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h4>United States</h4>
+									<img src="flags/us.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Malaysia</h4>
+									<img src="flags/malaysia.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Liberia</h4>
+									<img src="flags/liberia.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Chile</h4>
+									<img src="flags/chile.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
 							</div>
 
 							<div class="clearfix"> </div>
@@ -226,7 +384,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</ul>
 		</div>
 		<div class="footer-right">
-			<p>© 2016 Flags n' More. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+			<p>© 2016 Lucas Beitzel. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
 		</div>
 		<div class="clearfix"> </div>
 	</div>
