--- a/my-favorites.html
+++ b/my-favorites.html
@@ -150,6 +150,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 						<div class="element">
 							<div class="col-md-4 latest-news-grid">
+								<h4>Burundi</h4>
+								<img src="flags/burundi.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+							</div>
+						</div>
+
+						<div class="element">
+							<div class="col-md-4 latest-news-grid">
+								<h4>Cambodia</h4>
+								<img src="flags/cambodia.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
+							</div>
+						</div>
+
+						<div class="element">
+							<div class="col-md-4 latest-news-grid">
 								<h4>United Kingdom</h4>
 								<img src="flags/uk.png" alt=" " class="img-responsive" style="padding:0px; border:1px solid black; margin:10px;"/>
 							</div>
