--- a/my-favorites.html
+++ b/my-favorites.html
@@ -65,7 +65,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<div class="banner-wrap">
 									<div class="banner1">
 										<div class="banner1-info">
-											<a href="index.html">Photographer <span>Make Yourself Beauty</span></a>
+											<a href="index.html">My Favorites</a>
 										</div>
 									</div>
 								</div>
@@ -74,7 +74,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<div class="banner-wrap">
 									<div class="banner2">
 										<div class="banner1-info">
-											<a href="index.html">Photographer <span>Make Yourself Beauty</span></a>
+											<a href="index.html">My Favorites</a>
 										</div>
 									</div>
 								</div>
@@ -83,7 +83,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<div class="banner-wrap">
 									<div class="banner3">
 										<div class="banner1-info">
-											<a href="index.html">Photographer <span>Make Yourself Beauty</span></a>
+											<a href="index.html">My Favorites</a>
 										</div>
 									</div>
 								</div>
