--- a/similar.html
+++ b/similar.html
@@ -127,6 +127,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<h4>Mali</h4>
 									<img src="flags/mali.png" alt=" " class="img-responsive"style="padding:0px; border:1px solid black; margin:10px;"/>
 								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Guinea</h4>
+									<img src="flags/guinea.png" alt=" " class="img-responsive"style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+							</div>
+
+							<div class="element">
+								<div class="col-md-4 latest-news-grid">
+									<h4>Bangladesh</h4>
+									<img src="flags/bangladesh.png" alt=" " class="img-responsive"style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Japan</h4>
+									<img src="flags/japan.png" alt=" " class="img-responsive"style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
+								<div class="col-md-4 latest-news-grid">
+									<h4>Palau</h4>
+									<img src="flags/palau.png" alt=" " class="img-responsive"style="padding:0px; border:1px solid black; margin:10px;"/>
+								</div>
 							</div>
 
 							<div class="element">
